--- a/args/windows.args.gn
+++ b/args/windows.args.gn
@@ -12,3 +12,6 @@ pdf_enable_xfa = false
 
 # Enable experimental win32 GDI APIs.
 pdf_use_win32_gdi = true
+
+# Generate a 32-bit version
+target_cpu = "x86"
